	- Since the statusbar prompt code needs at least 4 columns in
	  order to work properly, make that the minimum number of
	  columns nano requires to run, and remove assertions and code
	  that make use of a smaller number.  Changes to window_init(),
	  nanoget_repaint(), titlebar(), statusbar(), and
	  get_page_start(). (DLR)
- nano.h:
	- Readd MIN_EDITOR_COLS #define. (DLR)
- winio.c:
  edit_add()
	- Rename to edit_draw(), and rename parameter yval to line.
	  (DLR)
- doc/nanorc.sample:
	- Tweak the "c-file" regex for characters to properly accept
	  '\"' and reject '"' and '''. (DLR)

GNU nano 1.3.9 - 2005.10.23
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Fix a few last instances of the current line number's being
	  saved as an int instead of a ssize_t.  Changes to
	  renumber_all(), renumber(), do_alt_speller(), and
	  backup_lines(). (DLR)
	- Reorder some functions for consistency. (DLR)
	- Rename variable open_files openfile, for consistency. (DLR)
	- Remove renumber()'s dependency on the main filestruct.
	  Changes to renumber(); removal of renumber_all(). (DLR)
	- Restructure things so that every file has its own
	  openfilestruct, and so that the values in it are used directly
	  instead of being periodically synced up with the globals.
	  Accordingly, remove the globals.  Changes to pretty much
	  every function.  Rename add_open_file() make_new_buffer(),
	  rename load_buffer() open_buffer(), rename load_open_file()
	  display_buffer(), rename open_prevnext_file()
	  switch_to_prevnext_buffer(), rename open_prevfile_void()
	  switch_to_prev_buffer(), rename open_nextfile_void()
	  switch_to_next_buffer(), rename write_marked()
	  write_marked_file(), remove load_file(), rename cancel_fork()
	  cancel_command(), rename open_pipe() execute_command(), remove
	  execute_command(), rename resize_variables(), rename
	  global_init() window_size_init(), rename get_buffer()